<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/GameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dip" >

    <RelativeLayout
        android:id="@+id/statsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonsRelativeLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/black_border" >

        <TextView
            android:id="@+id/textViewStatsTitle"
            style="@style/CustomStatsTextView"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="20dip"
            android:text="@string/share_subject"
            android:textSize="22sp"
            android:visibility="visible" />

        <TableLayout
            android:id="@+id/tableLayoutStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:stretchColumns="1,3" >

            <TableRow>

                <TextView
                    android:id="@+id/textViewLevelLabel"
                    style="@style/TableCol1TextView"
                    android:text="@string/stats_label_level" />

                <TextView
                    android:id="@+id/textViewLevel"
                    style="@style/TableCol2TextView"
                    android:text="21" />

                <TextView
                    android:id="@+id/textViewGameTimeLabel"
                    style="@style/TableCol3TextView"
                    android:text="@string/stats_label_game_time" />

                <TextView
                    android:id="@+id/textViewGameTime"
                    style="@style/TableCol4TextView"
                    android:text="21h37" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewPointsLabel"
                    style="@style/TableCol1TextView"
                    android:text="@string/stats_label_points" />

                <TextView
                    android:id="@+id/textViewPoints"
                    style="@style/TableCol2TextView"
                    android:text="8565" />

                <TextView
                    android:id="@+id/textViewSpeedLabel"
                    style="@style/TableCol3TextView"
                    android:text="@string/stats_label_speed" />

                <TextView
                    android:id="@+id/textViewSpeed"
                    style="@style/TableCol4TextView"
                    android:text="123ms" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewShotsLabel"
                    style="@style/TableCol1TextView"
                    android:text="@string/stats_label_shots" />

                <TextView
                    android:id="@+id/textViewShots"
                    style="@style/TableCol2TextView"
                    android:text="21032" />

                <TextView
                    android:id="@+id/textViewGreenLabel"
                    style="@style/TableCol3TextView"
                    android:text="@string/stats_label_green" />

                <TextView
                    android:id="@+id/textViewGreen"
                    style="@style/TableCol4TextView"
                    android:text="132" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textViewAcruracyLabel"
                    style="@style/TableCol1TextView"
                    android:text="@string/stats_label_accuracy" />

                <TextView
                    android:id="@+id/textViewAccuracy"
                    style="@style/TableCol2TextView"
                    android:text="98%" />

                <TextView
                    android:id="@+id/textViewLostGamesLabel"
                    style="@style/TableCol3TextView"
                    android:text="@string/stats_label_lost_games" />

                <TextView
                    android:id="@+id/textViewLostGames"
                    style="@style/TableCol4TextView"
                    android:text="32" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tableLayoutStats"
            android:src="@drawable/ic_plane_f21"
            android:alpha="0.3" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonsRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/btShare"
            style="@style/CustomButtonStyle"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="0dip"
            android:text="@string/stats_button_share" />

        <Button
            android:id="@+id/btOk"
            style="@style/CustomButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="0dip"
            android:text="@string/stats_button_ok" />
    </RelativeLayout>

</RelativeLayout>